--- a/style.css
+++ b/style.css
@@ -1,25 +1,55 @@
-body{
-    background: #536976;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #292E49, #536976); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    }
+body {
+   background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgba(0,8,120,1) 0%, rgba(95,184,224,1) 99.7% );
+}
 
-    header {
-       display: flex;
-       justify-content: center;
-    }
-
-    .nav_lista {
-    display: flex;   
-    list-style: none;
-    font-size: 40px;
-    color: aliceblue;
-    gap: 20px;
-    text-transform: uppercase;
-    justify-content: center;
-    }
-   .nav_item:hover{
-      background-color: rgb(122, 194, 223);
-      color: black;
-      cursor: pointer;
+header {
+   display: flex;
+   justify-content: center;
+}
+.nav_lista {
+   display: flex;   
+   list-style: none;
+   font-size: 40px;
+   color: aliceblue;
+   gap: 20px;
+   text-transform: uppercase;
+   justify-content: center;
    }
+  .nav_item:hover{
+     background-color: rgb(255, 255, 255);
+     color: rgb(102, 34, 228);
+     cursor: pointer;
+  }
+
+section {
+   width: 100%;
+   padding-left: 8%;
+  }
+
+.secao{
+   padding-right: 8%;
+   padding-top: 2%;
+}
+
+.moldura_videos{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-around;
+   list-style: none;
+}
+
+.video{
+   flex: 1 1 30%;
+   margin: 10px;
+}
+
+.video iframe {
+   width: 100%;
+   right: auto;
+   border-radius: 15px;
+}
+
+* {
+   margin: 0;
+   padding: 0;
+}
