--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-   background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgba(0,8,120,1) 0%, rgba(95,184,224,1) 99.7% );
+   background: rgb(45,60,255);
+background: linear-gradient(90deg, rgba(45,60,255,1) 33%, rgba(255,203,70,1) 75%);
 }
 
 header {
